# agent-signing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  deploy-pages.yml  lint-and-test.yml  release.yml
agent_signing/: __init__.py  cli.py  signer.py
demo/: crewai_agent.py  langchain_agent.py  langchain_agent_autodiscovery.py  langchain_tampered_agent.py
ios/: README.md
ios/MealMetrics/: AddMealView.swift  Components.swift  DashboardView.swift  MealDetailView.swift  MealMetricsApp.swift  Models.swift  Theme.swift
ios/MealMetrics.xcodeproj/: project.pbxproj
ios/MealMetrics/Assets.xcassets/AccentColor.colorset/: Contents.json
landing_page/: index.html
server/backend/: auth.py  cli.py  database.py  main.py  models.py
server/frontend/: index.html  mockup_index.html
tests/: test_cli.py  test_signer.py
